# gitlab-graphviz-mirror

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  CHANGELOG.md  CMakeLists.txt  DEVELOPERS.md  Makefile.am  README.md  autogen.sh  config-cmake.h.in  config.iffe  configure.ac  gen_version.py  graphviz.sln  graphviz_version.h.cmake  requirements.txt
cmd/dot/: CMakeLists.txt  Makefile.am  dot.c  dot.vcxproj  dot_builtins.c  no_builtins.c
cmd/gvpr/: CMakeLists.txt  Makefile.am  gvpr.vcxproj  gvprmain.c
cmd/tools/: CMakeLists.txt  Makefile.am  acyclic.c  acyclic.vcxproj  bcomps.c  bcomps.vcxproj  ccomps.c  ccomps.vcxproj  colortbl.h  colxlate.c  convert.h  cvtgxl.c  dijkstra.c  dijkstra.vcxproj  gc.c  gc.vcxproj  gml2gv.c  gml2gv.h  gml2gv.vcxproj  gmlparse.y  gmlscan.l  graph_generator.c  graph_generator.h  graphml2gv.c  graphml2gv.vcxproj  gv2gml.c  gv2gml.vcxproj  gv2gxl.c  gvcolor.c  gvcolor.vcxproj  gvgen.c  gvgen.vcxproj  gvpack.c  gvpack.vcxproj  gvpack_builtins.c  gxl2gv.c  gxl2gv.vcxproj  matrix_market.c  matrix_market.h  mm2gv.c  (+12 more)
contrib/diffimg/: CMakeLists.txt  Makefile.am  diffimg.c
doc/info/: Makefile.am  attrs.html  colors.html  output.html  shapes.html
lib/ast/: CMakeLists.txt  Makefile.am  ast.h  ast.vcxproj  ast.vcxproj.filters  chresc.c  chrtoi.c  compat_unistd.h  error.c  error.h  fmtbuf.c  fmtesc.c  hashkey.h  pathaccess.c  pathbin.c  pathcanon.c  pathcat.c  pathexists.c  pathfind.c  pathgetlink.c  pathpath.c  sfstr.h  strcopy.c  stresc.c  strmatch.c  strton.c
lib/cdt/: CMakeLists.txt  Makefile.am  cdt.h  cdt.vcxproj  dtclose.c  dtdisc.c  dtextract.c  dtflatten.c  dthash.c  dthdr.h  dtlist.c  dtmethod.c  dtopen.c  dtrenew.c  dtrestore.c  dtsize.c  dtstat.c  dtstrhash.c  dttree.c  dtview.c  dtwalk.c
lib/cgraph/: CMakeLists.txt  Makefile.am  agerror.c  agxbuf.c  agxbuf.h  apply.c  attr.c  cghdr.h  cgraph.h  cgraph.vcxproj  cgraph.vcxproj.filters  cmpnd.c  edge.c  flatten.c  grammar.y  graph.c  id.c  imap.c  io.c  itos.h  mem.c  node.c  obj.c  pend.c  rec.c  refstr.c  scan.l  sprint.c  sprint.h  strcasecmp.h  subg.c  test_itos.c  test_sprint.c  unreachable.h  utils.c  write.c  xml-map.inc  xml.c  xml.h
lib/cgraph++/: CMakeLists.txt
lib/common/: CMakeLists.txt  Makefile.am  args.c  arith.h  arrows.c  color.h  colorprocs.h  colxlate.c  const.h  diagen.c  ellipse.c  emit.c  geom.c  geom.h  geomprocs.h  globals.c  globals.h  hpglgen.c  htmllex.c  htmllex.h  htmlparse.y  htmltable.c  htmltable.h  input.c  intset.c  intset.h  labels.c  logic.h  macros.h  memory.c  memory.h  mifgen.c  mpgen.c  ns.c  output.c  picgen.c  pointset.c  pointset.h  postproc.c  psusershape.c  (+14 more)
lib/expr/: CMakeLists.txt  Makefile.am  Makefile.nmake  excc.c  excontext.c  exdata.c  exerror.c  exeval.c  exexpr.c  exgram.h  exlexname.c  exlib.h  exnospace.c  exopen.c  exparse-replacements.cmake  exparse.h  exparse.y  expr.3  expr.h  expr.vcxproj  expr.vcxproj.filters  exrewind.c  exstash.c  extoken.c  extype.c  exzero.c
lib/fdpgen/: CMakeLists.txt  Makefile.am  clusteredges.c  clusteredges.h  comp.c  comp.h  dbg.c  dbg.h  fdp.h  fdpinit.c  grid.c  grid.h  gvfdpgen.vcxproj  layout.c  tlayout.c  tlayout.h  xlayout.c  xlayout.h
lib/gvc/: CMakeLists.txt  Makefile.am  gvc.c  gvc.def  gvc.h  gvcext.h  gvcint.h  gvcjob.h  gvcommon.h  gvconfig.c  gvconfig.h  gvcontext.c  gvcproc.h  gvdevice.c  gvevent.c  gvio.h  gvjobs.c  gvlayout.c  gvloadimage.c  gvplugin.c  gvplugin.h  gvplugin_device.h  gvplugin_layout.h  gvplugin_loadimage.h  gvplugin_render.h  gvplugin_textlayout.h  gvrender.c  gvtextlayout.c  gvtool_tred.c  gvusershape.c
lib/gvc++/: CMakeLists.txt  GVContext.cpp  GVLayout.cpp  GVLayout.h
lib/gvpr/: CMakeLists.txt  Makefile.am  actions.c  actions.h  compile.c  compile.h  gprstate.c  gprstate.h  gvpr.c  gvpr.h  gvprlib.vcxproj  mkdefs.c  parse.c  parse.h  queue.c  queue.h
lib/label/: CMakeLists.txt  Makefile.am  index.c  index.h  node.c  node.h  nrtmain.c  rectangle.c  rectangle.h  split.q.c  split.q.h  xlabels.c  xlabels.h
lib/mingle/: CMakeLists.txt  Makefile.am  agglomerative_bundling.c  agglomerative_bundling.h  edge_bundling.c  edge_bundling.h  ink.c  ink.h  minglelib.vcxproj  nearest_neighbor_graph.c  nearest_neighbor_graph.h  nearest_neighbor_graph_ann.cpp  nearest_neighbor_graph_ann.h
lib/ortho/: CMakeLists.txt  Makefile.am  fPQ.c  fPQ.h  gvortho.vcxproj  maze.c  maze.h  ortho.c  ortho.h  partition.c  partition.h  rawgraph.c  rawgraph.h  sgraph.c  sgraph.h  structures.h  trap.h  trapezoid.c
lib/osage/: CMakeLists.txt  Makefile.am  osage.h  osage.vcxproj  osageinit.c
lib/pack/: CMakeLists.txt  Makefile.am  ccomps.c  pack.c  pack.h  ptest.c
lib/patchwork/: CMakeLists.txt  Makefile.am  gvpatchwork.vcxproj  patchwork.c  patchwork.h  patchworkinit.c  tree_map.c  tree_map.h
lib/pathplan/: CMakeLists.txt  Makefile.am  Pathplan.vcxproj  cvt.c  inpoly.c  pathgeom.h  pathplan.def  pathplan.h  pathutil.h  route.c  shortest.c  shortestpth.c  solvers.c  solvers.h  tri.h  triang.c  util.c  vis.h  visibility.c  vispath.h
lib/sfdpgen/: CMakeLists.txt  Makefile.am  Multilevel.c  Multilevel.h  PriorityQueue.c  PriorityQueue.h  layout_similarity.c  post_process.c  post_process.h  sfdp.h  sfdp.vcxproj  sfdpinit.c  sfdpinternal.h  sparse_solve.c  sparse_solve.h  spring_electrical.c  spring_electrical.h  stress_model.c  stress_model.h  uniform_stress.c  uniform_stress.h
lib/sfio/: CMakeLists.txt  Makefile.am  README  sfclose.c  sfclrlock.c  sfcvt.c  sfdisc.c  sfdlen.c  sfexcept.c  sfexit.c  (+57 more)
rtest/: 1767.c  1910.c  2057.c  2095.dot  Makefile.am  cdiff.c  generate_graph.py  gvtest.py  rtest.py  rtest.sh  test_examples.py  test_itos.py  test_misc.py  test_regression.py  test_sprint.py  test_tools.py  test_vmalloc.py  tests.txt  tests_subset.txt
tests/: CMakeLists.txt  Makefile.am  svg_analyzer.cpp  svg_analyzer.h  svg_analyzer_interface.h  svgpp_context.cpp  svgpp_context.h  svgpp_document_traverser.cpp  test_AGraph_construction.cpp  test_GVContext_construction.cpp  test_GVContext_render_svg.cpp  test_GVLayout_construction.cpp  test_GVLayout_render.cpp  test_simple.cpp
(+853 files in other folders)
