## Process this file with automake to produce Makefile.in

htmldir = $(pkgdatadir)/doc/html/info

html_DATA = attrs.html colors.html command.html \
  index.html lang.html output.html shapes.html arrows.html \
  g_lin0.png g_lin270.png g_lin45.png g_rad0.png g_rad270.png g_rad45.png \
  g_lin180.png g_lin360.png g_lin90.png g_rad180.png g_rad360.png g_rad90.png \
  sdlshapes.png \
  html2.gv html3.gv html4.gv plugins.png \
  c_bold.png c_dashed.png c_dotted.png c_filled.png c_rounded.png c_solid.png c_striped.png \
  e_bold.png e_dashed.png e_dotted.png e_solid.png \
  g_lin0.png g_lin180.png g_lin270.png g_lin360.png g_lin45.png g_lin90.png g_rad0.png \
  g_rad180.png g_rad270.png g_rad360.png g_rad45.png g_rad90.png \
  n_bold.png n_dashed.png n_diagonals.png n_dotted.png n_filled.png \
  n_rounded.png n_solid.png n_striped.png n_wedged.png \
  none_back.png none_both.png none_forward.png none_none.png \
  normal_back.png normal_both.png normal_forward.png normal_none.png \
  spline_curved.png spline_none.png spline_polyline.png \
  spline_line.png spline_ortho.png spline_spline.png

EXTRA_DIST = $(html_DATA)
